# tgfx

include/tgfx/core/: Font.h  Typeface.h
src/core/: Font.cpp  ScalerContext.cpp  ScalerContext.h
src/vectors/freetype/: FTTypeface.cpp
src/vectors/web/: WebTypeface.cpp
web/: .gitignore  package.json
web/ckadapter/: CMakeLists.txt  adapter.ts  canvaskit.ts  index.css  index.html  index.ts
web/ckadapter/src/: TGFXView.cpp  TGFXView.h
web/script/: cmake.ckadapter.js  rollup.ckadapter.js
